# birthdaybot

./: .gitignore  Cargo.toml  Dockerfile  build.sh  invoke.sh  response.json
.github/workflows/: build.yaml
src/: bot.rs  db.rs  main.rs  models.rs
