[package]
name = "birthdaybot"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
futures-util = "0.3.8"
hyper = "0.13.9"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
once_cell = "1.4.1"
reqwest = { version = "0.10.8", default-features = false }
rusoto_core = { version = "0.45.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.45.0", default-features = false }
rusoto_ssm = { version = "0.45.0", default-features = false }
serde = { features = ["derive"], version = "1.0.117" }
serde_json = "1.0.59"
teloxide = { git = "https://github.com/mikailbag/teloxide", branch = "rustls", features = ["macros"] }
tokio = "0.2.22"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
