[package]
name = "birthdaybot"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
chrono = "0.4.19"
futures-util = "0.3.19"
hyper = "0.14.16"
lambda_runtime = "0.4.1"
once_cell = "1.9.0"
reqwest = { version = "0.11.9", default-features = false }
rusoto_core = { version = "0.47.0", default-features = false, features = ["native-tls"] }
rusoto_dynamodb = { version = "0.47.0", default-features = false }
rusoto_ssm = { version = "0.47.0", default-features = false }
serde = { features = ["derive"], version = "1.0.136" }
serde_json = "1.0.78"
teloxide = { version = "0.5.3", features = ["macros"] }
tokio = "1.16.1"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.7"
